Change Log for OpenXava project
===============================

- Fix: @ReadOnly does not work for views with inheritance inside groups or sections.
- Fix: Update schema tool does not create images table for IMAGES_GALLERY estereotype. 
- Fix: Infinite loop when generating PDF or any other list action from a collection inside a section of a reference.
- generatePortlets ant target works for WebSphere Portal 8, generateWebSpherePortal8Portlets is no longer needed.
- Fix: Portlet application cannot be deployed on Liferay 6.0 and 6.1.
- Fix: Boolean property with read only checkbox in Spanish has always false as value, even if it's checked.
- Fix: Drag and drop in @ElementCollection with @OrderColumn after adding several rows fails.
- Fix: Checkboxes in element collections are too bigs.
- Fix: Ordering rows in @OrderColumn collections does not work in touch screens.
- Fix: Moving and resizing columns in list in collection does not work with touch screens.
- Fix: Removing a second row removes all rows until the end with element collections.
- Fix: Removing a row after adding several rows remove all rows after it in element collections.
- Fix: OpenXava does not work in Android tablets.
- Fix: Schema update does not work with Hibernate Envers.
- Fix: @ReadOnly with @ElementCollection makes the data lost when saving.
- Fix: @SearchAction is ignored the second time when inheritance is used in the reference.
- Fix: Search key with default value calculator cleared in element collections.
- Fix: Filtering list with a reference as descriptions list with composite key that includes other reference fails.
- Fix: Default scale is ignored with XML components. 
- Fix: The time part is not exported to Excel for stereotype DATETIME with a java.util.Date property.
- Fix: Filtering in list does not work for stereotype DATETIME with a java.util.Date property.
- Fix: Spanish format for dates in Excel generation, even if the locale is not Spanish.